--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(window).load(function() {
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a href="index.html" class="menuItem hvr-underline-from-center"><li>Home</li></a>
+      <a href="https://guy-forster.github.io/winewebsite" class="menuItem hvr-underline-from-center"><li>Home</li></a>
       <a href="#" class="menuItem hvr-underline-from-center"><li>Contact</li></a>
     </ul>
   </div>
