--- a/sauvignon.html
+++ b/sauvignon.html
@@ -68,7 +68,7 @@ $(window).load(function() {
 
 <div class="grid-container">
 
-<section class="mobileWineBlock hideOnDesktop" id="merlotMobile">
+<section class="mobileWineBlock hideOnDesktop" id="wineMobile">
   <p><span class="year">2014</span><br> 
       <span class="blend">CABERNET SAUVIGNON</span>
       <br>
