--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $(window).load(function() {
     -->
     <ul id="menu">
       <a href="https://guy-forster.github.io/winewebsite" class="menuItem hvr-underline-from-center"><li>Home</li></a>
-      <a href="#" class="menuItem hvr-underline-from-center"><li>Contact</li></a>
+      <a href="http://guyforster.co.za" class="menuItem hvr-underline-from-center"><li>guyforster.co.za</li></a>
     </ul>
   </div>
 </nav>
